--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,5 @@
 body{
-    background:  blue;
-    color:  black;
+    /*background: blue green;*/
+    background-image: linear-gradient(blue, rgb(209, 53, 79)); 
+    color:  pink;
 }
