--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 body{
     /*background: blue green;*/
-    background-image: linear-gradient(blue, rgb(209, 53, 79)); 
+    background-image: linear-gradient(blue, rgb(209, 53, 79) purple); 
     color:  pink;
 }
