alteraçao de cor

--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 body{
     /*background: blue green;*/
-    background-image: linear-gradient(blue, purple); 
-    
+    background-image: linear-gradient(black, purple); 
+
     color:  pink;
 }
 img{
