--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,9 @@ body{
     background-image: linear-gradient(black, purple); 
 
     color:  pink;
+    font-family: roboto;
+    font-size: x-large;
+    text-align: center;
 }
 img{
         width: 320px;
